# blog

./: .gitignore  Pipfile  blog  config.toml  pyproject.toml  requirements.txt
app/: cli.py  generate.py  serve.py
content/: 2014-12-29-python-aead.md  2016-09-01-an-interesting-crypto-vuln.md  2017-08-26-dnssec-primer.md  2018-01-01-nebula-walkthrough.md  2018-02-12-cryptonote-unauthenticated-json-rpc.md  2018-05-22-protostar-walkthrough-stack.md  2018-05-27-protostar-walkthrough-format.md  2018-06-03-protostar-walkthrough-heap.md  2018-06-26-deconstructing-kony-7-android-applications.md  2018-09-07-using-a-non-system-libc.md  2018-09-26-CVE-2018-8023.md  2018-10-30-drcov-file-format.md  2018-12-24-container-runtimes.md  2018-12-31-frida-wasm-experiments.md  2019-04-12-CVE-2018-11793.md  2019-04-17-notes-on-compiling-android-kernel.md  2019-05-28-ghidra-jnianalyzer.md  2019-10-13-analyzing-kony-mobile-applications.md  2021-01-15-frida-hotspot-jvm.md  2021-05-17-semgrep-javascript-imports.md  2021-07-11-prolink-prc2402m-multiple-vulnerabilities.md  2021-07-22-binaryninja-rust-hello-world.md  2021-10-03-binaryninja-windows-syscall-numbers.md  2021-10-09-binaryninja-lifting-windows-syscalls.md  2022-01-27-pwnkit-no-logs.md
layouts/: default.html  head.html  index.html  page.html  post.html
pages/: about.md  opensource.md  vulnerabilities.md
posts/: 2014-09-28-look-before-you-pip.md  2014-12-29-python-aead.md  2015-08-23-python-fastpbkdf2.md  2016-09-01-an-interesting-crypto-vuln.md  2017-08-26-dnssec-primer.md  2018-01-01-nebula-walkthrough.md  (+19 more)
public/: custom.css
(+4 files in other folders)
