[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Terry Chia <terrycwk1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mistune = "^0.8.4"
PyYAML = "^5.3"
Pygments = "^2.5"
Jinja2 = "^2.10"
arrow = "^0.15.5"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
